{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 27,
  "lineage": "f081b6dc-c434-9796-55f9-35831fdf86fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cff89af60a91f865",
            "domain": "vpc",
            "id": "eipalloc-0a4ade05ce1b0587d",
            "network_interface": "eni-0aca105de199c9281",
            "private_dns": "ip-172-20-10-119.us-west-2.compute.internal",
            "private_ip": "172.20.10.119",
            "public_dns": "ec2-44-227-211-31.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.211.31",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "equalexperts_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c5204531f799e0c6",
            "arn": "arn:aws:ec2:us-west-2:095794556169:instance/i-07f56c6852a93382a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07f56c6852a93382a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "equalexperts",
            "monitoring": false,
            "primary_network_interface_id": "eni-070cb4fb380015a6e",
            "private_dns": "ip-172-20-20-39.us-west-2.compute.internal",
            "private_ip": "172.20.20.39",
            "public_ip": "34.221.127.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03193118b4727f2f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bba084e3e246d0ed",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00787e8ae22188dfc"
            ]
          },
          "depends_on": [
            "aws_subnet.terra_private_subnet_az_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "equalexperts_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c5204531f799e0c6",
            "arn": "arn:aws:ec2:us-west-2:095794556169:instance/i-03bc327cea35f0225",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03bc327cea35f0225",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "equalexperts",
            "monitoring": false,
            "primary_network_interface_id": "eni-094a8d669a902ba6f",
            "private_dns": "ip-172-20-10-229.us-west-2.compute.internal",
            "private_ip": "172.20.10.229",
            "public_ip": "34.221.20.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-093234623f3b29806",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049dd5d7dcb478335",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00787e8ae22188dfc"
            ]
          },
          "depends_on": [
            "aws_subnet.terra_ingress_subnet_az_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-003310c183a46e7d8",
            "owner_id": "095794556169",
            "vpc_id": "vpc-059c936f94e068f96"
          },
          "depends_on": [
            "aws_vpc.equalexperts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4ade05ce1b0587d",
            "id": "nat-0d053ef6938fed500",
            "network_interface_id": "eni-0aca105de199c9281",
            "private_ip": "172.20.10.119",
            "public_ip": "44.227.211.31",
            "subnet_id": "subnet-049dd5d7dcb478335",
            "tags": {
              "Name": "gw NAT 1"
            }
          },
          "depends_on": [
            "aws_eip.nat_1",
            "aws_subnet.terra_ingress_subnet_az_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "equalexperts_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095794556169:security-group/sg-042688b770fb8647c",
            "description": "Allows all traffic",
            "egress": [],
            "id": "sg-042688b770fb8647c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-docker",
            "name_prefix": null,
            "owner_id": "095794556169",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-059c936f94e068f96"
          },
          "depends_on": [
            "aws_vpc.equalexperts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "equalexperts_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095794556169:security-group/sg-0302fea67dc11b377",
            "description": "Allows all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0302fea67dc11b377",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-jenkins",
            "name_prefix": null,
            "owner_id": "095794556169",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-059c936f94e068f96"
          },
          "depends_on": [
            "aws_vpc.equalexperts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_ingress_subnet_az_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095794556169:subnet/subnet-049dd5d7dcb478335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-049dd5d7dcb478335",
            "map_public_ip_on_launch": true,
            "owner_id": "095794556169",
            "tags": {
              "Name": "Ingress Subnet 1"
            },
            "vpc_id": "vpc-059c936f94e068f96"
          },
          "depends_on": [
            "aws_vpc.equalexperts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_private_subnet_az_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095794556169:subnet/subnet-0bba084e3e246d0ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.20.20.0/24",
            "id": "subnet-0bba084e3e246d0ed",
            "map_public_ip_on_launch": false,
            "owner_id": "095794556169",
            "tags": {
              "Name": "Application Subnet 1"
            },
            "vpc_id": "vpc-059c936f94e068f96"
          },
          "depends_on": [
            "aws_vpc.equalexperts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "equalexperts",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095794556169:vpc/vpc-059c936f94e068f96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-06ad6f0e039d5ef4e",
            "default_route_table_id": "rtb-0db160b096df2dc80",
            "default_security_group_id": "sg-00787e8ae22188dfc",
            "dhcp_options_id": "dopt-74018c0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-059c936f94e068f96",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db160b096df2dc80",
            "owner_id": "095794556169",
            "tags": {
              "Name": "equalexperts"
            }
          }
        }
      ]
    }
  ]
}